--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
+    "name": "World Crash Rankings",
+    "description": "Burnout 2 World Crash Rankings",
     "license": "BSD-3-Clause",
     "keywords": [
         "framework",
         "zf2"
     ],
-    "homepage": "http://framework.zend.com/",
+    "homepage": "http://www.crashmoderankings.com/",
     "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": "2.2.*"
+        "php": ">=7.0",
+        "zendframework/zendframework": "2.4.*"
     }
 }
